feat: added proposers route
