# apps/proposer/src/routes/index.mjs
@@ -1,4 +1,3 @@
 import proposer from './proposer.mjs';
-import contracts from './contract-address.mjs';
 
-export { proposer, contracts };
+export default proposer;
